[gd_scene load_steps=7 format=2]

[ext_resource path="res://global_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Embark/Supplies.gd" type="Script" id=2]
[ext_resource path="res://GUI/Embark/SupplyCounter.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Embark/LivestockPage.gd" type="Script" id=4]
[ext_resource path="res://GUI/Embark/SpecialistPage.gd" type="Script" id=5]
[ext_resource path="res://GUI/Embark/ResourcePage.gd" type="Script" id=6]

[node name="Supplies" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
margin_right = 500.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmbarkButton" type="Button" parent="."]
visible = false
margin_left = 205.0
margin_top = 234.0
margin_right = 285.0
margin_bottom = 258.0
focus_mode = 0
enabled_focus_mode = 0
text = "Embark"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 392.0
margin_top = 235.0
margin_right = 452.0
margin_bottom = 259.0
focus_mode = 0
enabled_focus_mode = 0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 235.0
margin_right = 108.0
margin_bottom = 259.0
focus_mode = 0
enabled_focus_mode = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivestockPage" type="Control" parent="."]
margin_left = -1.0
margin_right = 499.0
margin_bottom = 235.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="LivestockPage"]
margin_left = 1.0
margin_top = 24.0
margin_right = 500.0
margin_bottom = 44.0
text = "Livestock Points: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LivestockPage"]
margin_left = 1.0
margin_top = 70.0
margin_right = 501.0
margin_bottom = 202.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LivestockPage/HBoxContainer"]
margin_left = 81.0
margin_right = 223.0
margin_bottom = 132.0
custom_constants/separation = 30
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CattleCounter" parent="LivestockPage/HBoxContainer/VBoxContainer" groups=[
"LivestockCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 142.0
margin_bottom = 24.0

[node name="Resource" parent="LivestockPage/HBoxContainer/VBoxContainer/CattleCounter" index="0"]
margin_right = 52.0
text = "Cattle  "

[node name="MinusButton" parent="LivestockPage/HBoxContainer/VBoxContainer/CattleCounter" index="1"]
margin_left = 56.0
margin_right = 76.0

[node name="Amount" parent="LivestockPage/HBoxContainer/VBoxContainer/CattleCounter" index="2"]
margin_left = 80.0
margin_right = 118.0

[node name="PlusButton" parent="LivestockPage/HBoxContainer/VBoxContainer/CattleCounter" index="3"]
margin_left = 122.0
margin_right = 142.0

[node name="PigCounter" parent="LivestockPage/HBoxContainer/VBoxContainer" groups=[
"LivestockCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 54.0
margin_right = 142.0
margin_bottom = 78.0

[node name="Resource" parent="LivestockPage/HBoxContainer/VBoxContainer/PigCounter" index="0"]
margin_right = 52.0
text = "Swine  "

[node name="MinusButton" parent="LivestockPage/HBoxContainer/VBoxContainer/PigCounter" index="1"]
margin_left = 56.0
margin_right = 76.0

[node name="Amount" parent="LivestockPage/HBoxContainer/VBoxContainer/PigCounter" index="2"]
margin_left = 80.0
margin_right = 118.0

[node name="PlusButton" parent="LivestockPage/HBoxContainer/VBoxContainer/PigCounter" index="3"]
margin_left = 122.0
margin_right = 142.0

[node name="GoatCounter" parent="LivestockPage/HBoxContainer/VBoxContainer" groups=[
"LivestockCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 108.0
margin_right = 142.0
margin_bottom = 132.0

[node name="Resource" parent="LivestockPage/HBoxContainer/VBoxContainer/GoatCounter" index="0"]
margin_left = 10.0
margin_right = 52.0
text = "Goat  "

[node name="MinusButton" parent="LivestockPage/HBoxContainer/VBoxContainer/GoatCounter" index="1"]
margin_left = 56.0
margin_right = 76.0

[node name="Amount" parent="LivestockPage/HBoxContainer/VBoxContainer/GoatCounter" index="2"]
margin_left = 80.0
margin_right = 118.0

[node name="PlusButton" parent="LivestockPage/HBoxContainer/VBoxContainer/GoatCounter" index="3"]
margin_left = 122.0
margin_right = 142.0

[node name="VBoxContainer2" type="VBoxContainer" parent="LivestockPage/HBoxContainer"]
margin_left = 263.0
margin_right = 419.0
margin_bottom = 132.0
custom_constants/separation = 30
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SheepCounter" parent="LivestockPage/HBoxContainer/VBoxContainer2" groups=[
"LivestockCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 156.0
margin_bottom = 24.0

[node name="Resource" parent="LivestockPage/HBoxContainer/VBoxContainer2/SheepCounter" index="0"]
margin_left = 12.0
margin_right = 66.0
text = "Sheep  "

[node name="MinusButton" parent="LivestockPage/HBoxContainer/VBoxContainer2/SheepCounter" index="1"]
margin_left = 70.0
margin_right = 90.0

[node name="Amount" parent="LivestockPage/HBoxContainer/VBoxContainer2/SheepCounter" index="2"]
margin_left = 94.0
margin_right = 132.0

[node name="PlusButton" parent="LivestockPage/HBoxContainer/VBoxContainer2/SheepCounter" index="3"]
margin_left = 136.0
margin_right = 156.0

[node name="ChickenCounter" parent="LivestockPage/HBoxContainer/VBoxContainer2" groups=[
"LivestockCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 54.0
margin_right = 156.0
margin_bottom = 78.0

[node name="Resource" parent="LivestockPage/HBoxContainer/VBoxContainer2/ChickenCounter" index="0"]
margin_right = 66.0
text = "Chicken  "

[node name="MinusButton" parent="LivestockPage/HBoxContainer/VBoxContainer2/ChickenCounter" index="1"]
margin_left = 70.0
margin_right = 90.0

[node name="Amount" parent="LivestockPage/HBoxContainer/VBoxContainer2/ChickenCounter" index="2"]
margin_left = 94.0
margin_right = 132.0

[node name="PlusButton" parent="LivestockPage/HBoxContainer/VBoxContainer2/ChickenCounter" index="3"]
margin_left = 136.0
margin_right = 156.0

[node name="RabbitCounter" parent="LivestockPage/HBoxContainer/VBoxContainer2" groups=[
"LivestockCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 108.0
margin_right = 156.0
margin_bottom = 132.0

[node name="Resource" parent="LivestockPage/HBoxContainer/VBoxContainer2/RabbitCounter" index="0"]
margin_left = 8.0
margin_right = 66.0
text = "Rabbit  "

[node name="MinusButton" parent="LivestockPage/HBoxContainer/VBoxContainer2/RabbitCounter" index="1"]
margin_left = 70.0
margin_right = 90.0

[node name="Amount" parent="LivestockPage/HBoxContainer/VBoxContainer2/RabbitCounter" index="2"]
margin_left = 94.0
margin_right = 132.0

[node name="PlusButton" parent="LivestockPage/HBoxContainer/VBoxContainer2/RabbitCounter" index="3"]
margin_left = 136.0
margin_right = 156.0

[node name="ResourcePage" type="Control" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 235.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="ResourcePage"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 44.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcePage"]
margin_top = 70.0
margin_right = 500.0
margin_bottom = 202.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ResourcePage/HBoxContainer"]
margin_left = 77.0
margin_right = 217.0
margin_bottom = 132.0
custom_constants/separation = 30
alignment = 2

[node name="Wood" parent="ResourcePage/HBoxContainer/VBoxContainer" groups=[
"ResourceCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 140.0
margin_bottom = 24.0

[node name="Resource" parent="ResourcePage/HBoxContainer/VBoxContainer/Wood" index="0"]
margin_left = 1.0
margin_right = 50.0
text = "Wood  "

[node name="MinusButton" parent="ResourcePage/HBoxContainer/VBoxContainer/Wood" index="1"]
margin_left = 54.0
margin_right = 74.0

[node name="Amount" parent="ResourcePage/HBoxContainer/VBoxContainer/Wood" index="2"]
margin_left = 78.0
margin_right = 116.0

[node name="PlusButton" parent="ResourcePage/HBoxContainer/VBoxContainer/Wood" index="3"]
margin_left = 120.0
margin_right = 140.0

[node name="Stone" parent="ResourcePage/HBoxContainer/VBoxContainer" groups=[
"ResourceCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 54.0
margin_right = 140.0
margin_bottom = 78.0

[node name="Resource" parent="ResourcePage/HBoxContainer/VBoxContainer/Stone" index="0"]
margin_right = 50.0
text = "Stone  "

[node name="MinusButton" parent="ResourcePage/HBoxContainer/VBoxContainer/Stone" index="1"]
margin_left = 54.0
margin_right = 74.0

[node name="Amount" parent="ResourcePage/HBoxContainer/VBoxContainer/Stone" index="2"]
margin_left = 78.0
margin_right = 116.0

[node name="PlusButton" parent="ResourcePage/HBoxContainer/VBoxContainer/Stone" index="3"]
margin_left = 120.0
margin_right = 140.0

[node name="Fiber" parent="ResourcePage/HBoxContainer/VBoxContainer" groups=[
"ResourceCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 108.0
margin_right = 140.0
margin_bottom = 132.0

[node name="Resource" parent="ResourcePage/HBoxContainer/VBoxContainer/Fiber" index="0"]
margin_left = 4.0
margin_right = 50.0
text = "Fiber  "

[node name="MinusButton" parent="ResourcePage/HBoxContainer/VBoxContainer/Fiber" index="1"]
margin_left = 54.0
margin_right = 74.0

[node name="Amount" parent="ResourcePage/HBoxContainer/VBoxContainer/Fiber" index="2"]
margin_left = 78.0
margin_right = 116.0

[node name="PlusButton" parent="ResourcePage/HBoxContainer/VBoxContainer/Fiber" index="3"]
margin_left = 120.0
margin_right = 140.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ResourcePage/HBoxContainer"]
margin_left = 257.0
margin_right = 422.0
margin_bottom = 132.0
custom_constants/separation = 30
alignment = 2

[node name="Ingots" parent="ResourcePage/HBoxContainer/VBoxContainer2" groups=[
"ResourceCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 165.0
margin_bottom = 24.0

[node name="Resource" parent="ResourcePage/HBoxContainer/VBoxContainer2/Ingots" index="0"]
margin_left = 21.0
margin_right = 75.0
text = "Ingots  "

[node name="MinusButton" parent="ResourcePage/HBoxContainer/VBoxContainer2/Ingots" index="1"]
margin_left = 79.0
margin_right = 99.0

[node name="Amount" parent="ResourcePage/HBoxContainer/VBoxContainer2/Ingots" index="2"]
margin_left = 103.0
margin_right = 141.0

[node name="PlusButton" parent="ResourcePage/HBoxContainer/VBoxContainer2/Ingots" index="3"]
margin_left = 145.0
margin_right = 165.0

[node name="Obsidian" parent="ResourcePage/HBoxContainer/VBoxContainer2" groups=[
"ResourceCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 54.0
margin_right = 165.0
margin_bottom = 78.0

[node name="Resource" parent="ResourcePage/HBoxContainer/VBoxContainer2/Obsidian" index="0"]
margin_right = 75.0
text = "Obsidian  "

[node name="MinusButton" parent="ResourcePage/HBoxContainer/VBoxContainer2/Obsidian" index="1"]
margin_left = 79.0
margin_right = 99.0

[node name="Amount" parent="ResourcePage/HBoxContainer/VBoxContainer2/Obsidian" index="2"]
margin_left = 103.0
margin_right = 141.0

[node name="PlusButton" parent="ResourcePage/HBoxContainer/VBoxContainer2/Obsidian" index="3"]
margin_left = 145.0
margin_right = 165.0

[node name="Coins" parent="ResourcePage/HBoxContainer/VBoxContainer2" groups=[
"ResourceCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 108.0
margin_right = 165.0
margin_bottom = 132.0

[node name="Resource" parent="ResourcePage/HBoxContainer/VBoxContainer2/Coins" index="0"]
margin_left = 27.0
margin_right = 75.0
text = "Coins  "

[node name="MinusButton" parent="ResourcePage/HBoxContainer/VBoxContainer2/Coins" index="1"]
margin_left = 79.0
margin_right = 99.0

[node name="Amount" parent="ResourcePage/HBoxContainer/VBoxContainer2/Coins" index="2"]
margin_left = 103.0
margin_right = 141.0

[node name="PlusButton" parent="ResourcePage/HBoxContainer/VBoxContainer2/Coins" index="3"]
margin_left = 145.0
margin_right = 165.0

[node name="SpecialistPage" type="Control" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 235.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="SpecialistPage"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 44.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SpecialistPage"]
margin_top = 90.0
margin_right = 500.0
margin_bottom = 183.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SpecialistPage/HBoxContainer"]
margin_left = 53.0
margin_right = 244.0
margin_bottom = 93.0
custom_constants/separation = 45
alignment = 2

[node name="ConstructionCounter" parent="SpecialistPage/HBoxContainer/VBoxContainer" groups=[
"SupplyCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 191.0
margin_bottom = 24.0

[node name="Resource" parent="SpecialistPage/HBoxContainer/VBoxContainer/ConstructionCounter" index="0"]
margin_right = 101.0
text = "Construction  "

[node name="MinusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer/ConstructionCounter" index="1"]
margin_left = 105.0
margin_right = 125.0

[node name="Amount" parent="SpecialistPage/HBoxContainer/VBoxContainer/ConstructionCounter" index="2"]
margin_left = 129.0
margin_right = 167.0

[node name="PlusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer/ConstructionCounter" index="3"]
margin_left = 171.0
margin_right = 191.0

[node name="FarmingCounter" parent="SpecialistPage/HBoxContainer/VBoxContainer" groups=[
"SupplyCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 69.0
margin_right = 191.0
margin_bottom = 93.0

[node name="Resource" parent="SpecialistPage/HBoxContainer/VBoxContainer/FarmingCounter" index="0"]
margin_left = 33.0
margin_right = 101.0
text = "Farming  "

[node name="MinusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer/FarmingCounter" index="1"]
margin_left = 105.0
margin_right = 125.0

[node name="Amount" parent="SpecialistPage/HBoxContainer/VBoxContainer/FarmingCounter" index="2"]
margin_left = 129.0
margin_right = 167.0

[node name="PlusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer/FarmingCounter" index="3"]
margin_left = 171.0
margin_right = 191.0

[node name="VBoxContainer2" type="VBoxContainer" parent="SpecialistPage/HBoxContainer"]
margin_left = 284.0
margin_right = 446.0
margin_bottom = 93.0
custom_constants/separation = 45
alignment = 2

[node name="TradingCounter" parent="SpecialistPage/HBoxContainer/VBoxContainer2" groups=[
"SupplyCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 162.0
margin_bottom = 24.0

[node name="Resource" parent="SpecialistPage/HBoxContainer/VBoxContainer2/TradingCounter" index="0"]
margin_left = 8.0
margin_right = 72.0
text = "Trading  "

[node name="MinusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer2/TradingCounter" index="1"]
margin_left = 76.0
margin_right = 96.0

[node name="Amount" parent="SpecialistPage/HBoxContainer/VBoxContainer2/TradingCounter" index="2"]
margin_left = 100.0
margin_right = 138.0

[node name="PlusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer2/TradingCounter" index="3"]
margin_left = 142.0
margin_right = 162.0

[node name="ForagingCounter" parent="SpecialistPage/HBoxContainer/VBoxContainer2" groups=[
"SupplyCounter",
] instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 69.0
margin_right = 162.0
margin_bottom = 93.0

[node name="Resource" parent="SpecialistPage/HBoxContainer/VBoxContainer2/ForagingCounter" index="0"]
margin_right = 72.0
text = "Foraging  "

[node name="MinusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer2/ForagingCounter" index="1"]
margin_left = 76.0
margin_right = 96.0

[node name="Amount" parent="SpecialistPage/HBoxContainer/VBoxContainer2/ForagingCounter" index="2"]
margin_left = 100.0
margin_right = 138.0

[node name="PlusButton" parent="SpecialistPage/HBoxContainer/VBoxContainer2/ForagingCounter" index="3"]
margin_left = 142.0
margin_right = 162.0

[node name="PointWarning" type="Label" parent="."]
visible = false
margin_left = 352.0
margin_top = 224.0
margin_right = 473.0
margin_bottom = 267.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Warning: Not all points used"
align = 1
autowrap = true
[connection signal="pressed" from="EmbarkButton" to="." method="_on_EmbarkButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="PrevButton" to="." method="_on_PrevButton_pressed"]

[editable path="LivestockPage/HBoxContainer/VBoxContainer/CattleCounter"]

[editable path="LivestockPage/HBoxContainer/VBoxContainer/PigCounter"]

[editable path="LivestockPage/HBoxContainer/VBoxContainer/GoatCounter"]

[editable path="LivestockPage/HBoxContainer/VBoxContainer2/SheepCounter"]

[editable path="LivestockPage/HBoxContainer/VBoxContainer2/ChickenCounter"]

[editable path="LivestockPage/HBoxContainer/VBoxContainer2/RabbitCounter"]

[editable path="ResourcePage/HBoxContainer/VBoxContainer/Wood"]

[editable path="ResourcePage/HBoxContainer/VBoxContainer/Stone"]

[editable path="ResourcePage/HBoxContainer/VBoxContainer/Fiber"]

[editable path="ResourcePage/HBoxContainer/VBoxContainer2/Ingots"]

[editable path="ResourcePage/HBoxContainer/VBoxContainer2/Obsidian"]

[editable path="ResourcePage/HBoxContainer/VBoxContainer2/Coins"]

[editable path="SpecialistPage/HBoxContainer/VBoxContainer/ConstructionCounter"]

[editable path="SpecialistPage/HBoxContainer/VBoxContainer/FarmingCounter"]

[editable path="SpecialistPage/HBoxContainer/VBoxContainer2/TradingCounter"]

[editable path="SpecialistPage/HBoxContainer/VBoxContainer2/ForagingCounter"]
